<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>WidgetLogistica</class>
 <widget class="QWidget" name="WidgetLogistica">
  <property name="enabled">
   <bool>true</bool>
  </property>
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1386</width>
    <height>450</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0">
    <widget class="QSplitter" name="splitter_6">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <widget class="QFrame" name="frameForn">
      <layout class="QGridLayout" name="gridLayout_34">
       <item row="0" column="0">
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
          <widget class="QLabel" name="labelCompras_11">
           <property name="font">
            <font>
             <pointsize>14</pointsize>
             <weight>75</weight>
             <bold>true</bold>
            </font>
           </property>
           <property name="text">
            <string>Fornecedores</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item row="1" column="0">
        <widget class="TableView" name="tableForn">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="editTriggers">
          <set>QAbstractItemView::NoEditTriggers</set>
         </property>
         <property name="alternatingRowColors">
          <bool>true</bool>
         </property>
         <property name="selectionBehavior">
          <enum>QAbstractItemView::SelectRows</enum>
         </property>
         <property name="sortingEnabled">
          <bool>true</bool>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
     <widget class="QTabWidget" name="tabWidgetLogistica">
      <property name="currentIndex">
       <number>0</number>
      </property>
      <widget class="QWidget" name="tabAgendarColeta">
       <attribute name="title">
        <string>Agendar Coleta</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
         <widget class="WidgetLogisticaAgendarColeta" name="widgetAgendarColeta" native="true"/>
        </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tabColeta">
       <attribute name="title">
        <string>Coleta</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_4">
        <item row="0" column="0">
         <widget class="WidgetLogisticaColeta" name="widgetColeta" native="true"/>
        </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tabRecebimento">
       <attribute name="title">
        <string>Recebimento</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_28">
        <item row="0" column="0">
         <widget class="WidgetLogisticaRecebimento" name="widgetRecebimento" native="true"/>
        </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tabAgendarEntrega">
       <attribute name="title">
        <string>Agendar Entrega</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="0" column="0">
         <widget class="WidgetLogisticaAgendarEntrega" name="widgetAgendaEntrega" native="true"/>
        </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tabEntregas">
       <attribute name="title">
        <string>Entregas</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_27">
        <item row="0" column="0">
         <widget class="WidgetLogisticaEntregas" name="widgetCalendarioEntrega" native="true"/>
        </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tabCaminhoes">
       <attribute name="title">
        <string>Caminhões</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_6">
        <item row="0" column="0">
         <widget class="WidgetLogisticaCaminhao" name="widgetCaminhao" native="true"/>
        </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tabRepresentacao">
       <attribute name="title">
        <string>Representação</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_3">
        <item row="0" column="0">
         <widget class="WidgetLogisticaRepresentacao" name="widgetRepresentacao" native="true"/>
        </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tabEntregues">
       <attribute name="title">
        <string>Entregues</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_5">
        <item row="0" column="0">
         <widget class="WidgetLogisticaEntregues" name="widgetEntregues" native="true"/>
        </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tabCalendario">
       <attribute name="title">
        <string>Calendário</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_7">
        <item row="0" column="0">
         <widget class="WidgetLogisticaCalendario" name="widgetCalendario" native="true"/>
        </item>
       </layout>
      </widget>
     </widget>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>TableView</class>
   <extends>QTableView</extends>
   <header>src/tableview.h</header>
  </customwidget>
  <customwidget>
   <class>WidgetLogisticaRecebimento</class>
   <extends>QWidget</extends>
   <header>src/widgetlogisticarecebimento.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>WidgetLogisticaAgendarEntrega</class>
   <extends>QWidget</extends>
   <header>src/widgetlogisticaagendarentrega.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>WidgetLogisticaRepresentacao</class>
   <extends>QWidget</extends>
   <header>src/widgetlogisticarepresentacao.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>WidgetLogisticaAgendarColeta</class>
   <extends>QWidget</extends>
   <header>src/widgetlogisticaagendarcoleta.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>WidgetLogisticaEntregas</class>
   <extends>QWidget</extends>
   <header>src/widgetlogisticaentregas.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>WidgetLogisticaColeta</class>
   <extends>QWidget</extends>
   <header>src/widgetlogisticacoleta.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>WidgetLogisticaCaminhao</class>
   <extends>QWidget</extends>
   <header>src/widgetlogisticacaminhao.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>WidgetLogisticaEntregues</class>
   <extends>QWidget</extends>
   <header>src/widgetlogisticaentregues.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>WidgetLogisticaCalendario</class>
   <extends>QWidget</extends>
   <header>src/widgetlogisticacalendario.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
